--- a/.github/workflows/daily_eva.yml
+++ b/.github/workflows/daily_eva.yml
@@ -2,23 +2,25 @@ name: Daily EGX EVA Analysis
 
 on:
   schedule:
-    # Runs at 3:00 PM UTC (5:00 PM Cairo) every weekday
+    # Runs at 3:00 PM UTC (5:00 PM Cairo time) every weekday
     - cron: '0 15 * * 1-5'
-  workflow_dispatch: # Allows manual trigger
+  workflow_dispatch: # Allows manual trigger from GitHub UI
 
 jobs:
   analyze:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Set up Python
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.12
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install yfinance requests beautifulsoup4 lxml pandas numpy openpyxl rich fake-useragent supabase python-dotenv
 
       - name: Run EVA Analysis Pipeline
         env:
@@ -27,8 +29,10 @@ jobs:
         run: python main.py --quick --sources yahoo --export csv
 
       - name: Upload reports as artifacts
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: eva-reports-${{ github.run_number }}
           path: reports/
           retention-days: 30
+          if-no-files-found: ignore
