--- a/.github/workflows/daily_eva.yml
+++ b/.github/workflows/daily_eva.yml
@@ -4,29 +4,70 @@ on:
   schedule:
     # Runs at 3:00 PM UTC (5:00 PM Cairo time) every weekday
     - cron: '0 15 * * 1-5'
-  workflow_dispatch: # Allows manual trigger from GitHub UI
+  workflow_dispatch:
+
+concurrency:
+  group: eva-analysis
+  cancel-in-progress: true
 
 jobs:
   analyze:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
-      - name: Set up Python 3.12
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+          cache: 'pip'
 
       - name: Install dependencies
-        run: pip install yfinance requests beautifulsoup4 lxml pandas numpy openpyxl rich fake-useragent supabase python-dotenv
+        run: |
+          python -m pip install --upgrade pip
+          pip install \
+            yfinance \
+            requests \
+            beautifulsoup4 \
+            lxml \
+            pandas \
+            numpy \
+            openpyxl \
+            rich \
+            fake-useragent \
+            supabase \
+            python-dotenv
+
+      - name: Validate Supabase environment
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+        run: |
+          python - << 'EOF'
+          import os, sys
+          if not os.getenv("SUPABASE_URL"):
+              sys.exit("❌ SUPABASE_URL is missing")
+          if not os.getenv("SUPABASE_SERVICE_ROLE_KEY"):
+              sys.exit("❌ SUPABASE_SERVICE_ROLE_KEY is missing")
+          print("✅ Supabase environment variables detected")
+          print("Project ref:", os.getenv("SUPABASE_URL").split("//")[1].split(".")[0])
+          EOF
 
       - name: Run EVA Analysis Pipeline
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-        run: python main.py --quick --sources yahoo --export csv
+          SUPABASE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          PYTHONUNBUFFERED: 1
+        run: |
+          python main.py \
+            --quick \
+            --sources yahoo \
+            --export csv
 
       - name: Upload reports as artifacts
         if: always()
@@ -34,5 +75,6 @@ jobs:
         with:
           name: eva-reports-${{ github.run_number }}
           path: reports/
+          if-no-files-found: warn
           retention-days: 30
-          if-no-files-found: ignore
+
